    misaligned tables for larger sizes or counts.
  * enhancement: ROOM reports on immobile space if applicable.
  * optimization: optimized external-format routines.
  * bug fix: SB-INTROSPECT:ALLOCATION-INFORMATION returns :IMMOBILE
    instead of :FOREIGN for objects in immobile space.
  * bug fix: dotted lists in special forms and function call forms signal
    an appropriate error

changes in sbcl-1.3.20 relative to sbcl-1.3.19:
  * minor incompatible change: DEF{GENERIC,METHOD} no longer accept some
    illegal lambda lists such as (defgeneric bar (foo &key foo)) or
    (defgeneric baz (t)) that were accepted before.
  * optimization: a valueless &AUX binding in a BOA constructor does not
    force all slots reads in safe code to perform a full type check.
  * optimization: ATOMIC-PUSH and ATOMIC-POP generate better code
  * bug fix: the low-level debugger would erroneously print - or not print
    as the case may be - "(bad-address)" for some objects depending whether
    the --dynamic-space-size argument was used at Lisp startup
  * bug fix: a DEFCONSTANT with a non non-eql-comparable object as the value
    could cause miscompilation if that constant appeared as the default
    expression for an &OPTIONAL binding
  * bug fix: generic function lambda lists are now checked for repeated
    and otherwise illegal entries. (lp#1704114)
  * bug fix: setting gencgc_verbose = 1 could cause deadlock in fprintf()
    depending on the platform's stdio implementation. The relevant code
    has been changed to use snprintf() and write() instead.

changes in sbcl-1.3.19 relative to sbcl-1.3.18:
  * enhancement: specialized arrays can be printed readably without using
    *read-eval*
  * enhancement: SB-DEBUG:PRINT-BACKTRACE truncates huge string arguments.
    The full string remains available for inspection via (SB-DEBUG:ARG).
  * bug fix: backtracing from several threads at once could fail
  * bug fix: floating-point infinities could not be used as keys